--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.6.3",
     "@fontsource-variable/inter-tight": "^5.2.7",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
