--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^6.6.3",
+    "@astrojs/sitemap": "^3.6.0",
     "@fontsource-variable/inter-tight": "^5.2.7",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
